--- a/app/css/style.css
+++ b/app/css/style.css
@@ -700,6 +700,7 @@ body {
     top: 17px; } }
 
 .team {
+  background-color: #ffffff;
   text-align: center;
   margin-top: 82px;
   padding-bottom: 100px; }
